# Template

./: README.md  pyproject.toml
myapp/: main.py
