[tool.poetry]
name = "myapp"
version = "0.1.0"
description = "This is a template for using poetry and vscode"
authors = ["Shobeir Seddington <shobeir.mazinani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
